RESOLVED FIXED311808
innerText getter: fix trailing newlines and blank line handling for <p> and headings
https://bugs.webkit.org/show_bug.cgi?id=311808
Summary innerText getter: fix trailing newlines and blank line handling for <p> and h...
Chris Dumez
Reported 2026-04-09 03:45:18 PDT
innerText getter: fix trailing newlines and blank line handling for <p> and headings.
Attachments
Chris Dumez
Comment 1 2026-04-09 03:49:13 PDT
EWS
Comment 2 2026-04-13 02:00:26 PDT
Committed 311057@main (87ee373497a3): <https://commits.webkit.org/311057@main> Reviewed commits have been landed. Closing PR #62346 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-13 02:01:13 PDT
Chris Dumez
Comment 4 2026-04-13 02:16:23 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/59137
Note You need to log in before you can comment on or make changes to this bug.